Simplify plugins.